# recsys

./: .gitmodules  pyproject.toml
d2l/02-preliminaries/: 2.1 data_manipulations.ipynb  2.1.1 type_checking.ipynb  2.3 linear_algebra.ipynb  2.4 calculus.ipynb  2.5 statistics.ipynb  2.6 probabilities.ipynb
