[tool.poetry]
name = "d2l"
version = "0.1.0"
description = ""
authors = ["sma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
jupyterlab = "^4.3.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
bokeh = "^3.6.1"
panel = "^1.5.4"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
